--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "limax": "4.1.0",
     "lodash.merge": "^4.6.2",
     "react-i18next": "^14.1.1",
+    "universal-cookie": "^7.2.2",
     "unpic": "^3.18.0"
   },
   "devDependencies": {
